# Benji

./: -  .dockerignore  .gitignore  Dockerfile  README.md  REPORT.md  docker-compose.yml  play.py  pyproject.toml  train.py
.github/workflows/: ci.yml
data/raw/session_20260127_114707/: actions.csv
docker/: README.md  entrypoint.sh
docs/: ai_model_architecture.md  phase_1_infrastructure.md  system_architecture.md
src/agent/: bc.py  callbacks.py  dataset.py  model.py
src/benji_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/data/: collector.py
tests/: benchmark_reward.py  test_gym_env.py  verify_data.py  verify_gym_env.py
tools/: benchmark.py  capture_snapshot.py  debug_reset.py  debug_viewer.py  verify_adb.py  verify_restart.py  visualize_agent.py
