[project]
name = "benji-rl"
version = "0.1.0"
description = "Autonomous DRL agent for Benji Bananas using Scrcpy and PPO"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gymnasium>=0.29.1",
    "stable-baselines3>=2.2.1",
    "torch>=2.1.2",
    "opencv-python>=4.9.0",
    "numpy>=1.26.3",
    "wandb>=0.16.2",
    "pydantic>=2.6.0",
    "pytesseract>=0.3.10"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "ruff"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
